# Whisper-UI

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .yamlfmt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  compose.dev.yaml  compose.dev.yml  compose.override.yaml  compose.yaml  compose.yml  docker-compose.yaml  mise.toml  package-lock.json  package.json  pyproject.toml
.claude/: PREREQUISITES.md  settings.json
.claude/agents/: claude-md-reviewer.md  writing-quality-checker.md
.claude/rules/: planner-executor.md
.claude/skills/codex-delegate/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  claude-code-review.yml  claude.yml  docker-publish.yaml
.streamlit/: config.toml
docker/: Dockerfile.frontend  Dockerfile.worker  Dockerfile.worker.cpu  Dockerfile.worker.rocm  entrypoint-worker.sh  whisper-rocm-heal.sh
monitoring/: alerts.yml  prometheus.yml
src/whisper_ui/: app.py
src/whisper_ui/core/: config.py  constants.py  device.py  exceptions.py  languages.py  logging_setup.py  messages.py  models.py  redis_client.py  url_validation.py
src/whisper_ui/export/: base.py  docx_export.py  factory.py  json_export.py  srt.py  txt.py  utils.py  vtt.py
src/whisper_ui/pages/: 1_upload.py  2_jobs.py  3_viewer.py  _upload_filter.py
src/whisper_ui/pipeline/: align.py  assign_speakers.py  audio_probe.py  base.py  diarize.py  download.py  llm_correction.py  orchestrator.py  postprocess.py  preprocess.py  progress_bands.py  transcribe.py  whispercpp_transcribe.py
src/whisper_ui/storage/: database.py  filestore.py  migrations.py  users_repo.py
src/whisper_ui/ui/: _batch_zip.py  components.py  labels.py  state.py
src/whisper_ui/web/: app.py  auth.py  batch_zip.py  deps.py  flash.py  playlist.py  rate_limit.py  url_validation.py  validation.py
src/whisper_ui/web/middleware/: request_id.py
src/whisper_ui/web/routes/: admin.py  auth_routes.py  dashboard.py  jobs.py  metrics.py  shared.py  upload.py  viewer.py
src/whisper_ui/web/static/: style.css
src/whisper_ui/web/static/css/: input.css
src/whisper_ui/web/templates/: _alert.html  _bottom_nav.html  _dashboard_active.html  _icons.html  _job_card.html  _job_interactions.html  _job_list.html  _job_search.html  _sidebar.html  _status_chips.html  _status_count_badge.html  _toast.html  admin_jobs.html  admin_users.html  base.html  dashboard.html  jobs.html  login.html  register.html  shared_viewer.html  upload.html  viewer.html
src/whisper_ui/worker/: __main__.py  context_store.py  pipeline_callbacks.py  pipeline_dispatcher.py  progress.py  runtime.py  stage_tasks.py  tasks.py  timeout.py
tests/: conftest.py
tests/helpers/: __init__.py  dag_harness.py  orchestrator.py  store.py
tests/integration/: test_e2e_golden_path.py  test_pipeline.py  test_pipeline_dag_parallelism.py  test_throughput_queue_split.py  test_worker.py
tests/unit/: test_admin_routes.py  test_alert_macro.py  test_app_helpers.py  test_audio_probe.py  test_auth_middleware.py  test_auth_routes.py  test_batch.py  test_batch_download.py  test_batch_zip.py  test_cleanup.py  test_compose_env_wiring.py  test_config.py  test_constants.py  test_context_store.py  test_database.py  test_device.py  test_download.py  test_entrypoint_worker.py  test_export_docx.py  test_export_factory.py  test_export_json.py  test_export_srt.py  test_export_utils.py  test_export_vtt.py  test_filestore.py  test_flash.py  test_jobs_owner_isolation.py  test_llm_correction.py  test_llm_correction_integration.py  test_logging_setup.py  test_metrics.py  test_models.py  test_orchestrator.py  test_pipeline.py  test_pipeline_callbacks.py  test_pipeline_dag_parallelism.py  test_pipeline_dispatcher.py  test_pipeline_stages.py  test_playlist.py  test_postprocess.py  (+17 more)
tests/visual/: harness.html  test_components.py  test_contrast.py
