[project]
name = "whisper-ui"
version = "1.10.0"
description = "Speech-to-text system using OpenAI Whisper with speaker diarization and Docker GPU support"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0,<3",
  "pydantic-settings>=2.0,<3",
  "redis>=5.0,<8",
  "rq>=2.0,<3",
]

[project.optional-dependencies]
frontend = ["fastapi[standard]>=0.115,<1", "python-docx>=1.0,<2"]
worker = [
  # whisperx is installed separately in Dockerfile (--no-deps) to avoid its
  # torch~=2.8.0 constraint conflicting with the base image's torch 2.10.0.
  # The dependencies below cover whisperx's runtime needs (minus torch/torchaudio).
  "faster-whisper>=1.1.1",
  "ctranslate2>=4.5.0",
  "transformers>=4.48.0",
  "nltk>=3.9.1",
  "numpy>=2.1.0",
  "omegaconf>=2.3.0",
  "pandas>=2.2.3",
  "pyannote.audio>=4.0.0",
  "opencc-python-reimplemented>=0.1.7",
  "yt-dlp>=2024.5.26",
  "yt-dlp-ejs>=0.7.0",
  "httpx>=0.27,<1",
]
dev = ["whisper-ui[frontend]", "pytest>=9.0,<10", "pytest-cov>=7.0,<8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"whisper_ui" = ["web/templates/**/*.html", "web/static/**/*"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "W",    # pycodestyle warnings
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific
  "FAST", # FastAPI
  "C4",   # flake8-comprehensions
  "PERF", # perflint
  "FURB", # refurb
  "TC",   # flake8-type-checking
  "A",    # flake8-builtins
  "FA",   # flake8-future-annotations
  "T20",  # flake8-print
  "RET",  # flake8-return
  "PTH",  # flake8-use-pathlib
]
ignore = ["RUF012"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
