[project]
name = "whisper-ui"
version = "2.2.0"
description = "Speech-to-text system using OpenAI Whisper with speaker diarization and Docker GPU support"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0,<3",
  "pydantic-settings>=2.0,<3",
  "redis>=5.0,<7",
  "rq>=2.0,<3",
]

[project.optional-dependencies]
frontend = [
  "fastapi[standard]>=0.136.3,<1",
  "python-docx>=1.0,<2",
  "argon2-cffi>=25.1.0,<26",
  # SessionMiddleware needs itsdangerous to sign session cookies. It is
  # not a transitive dependency of fastapi[standard], so list it here.
  "itsdangerous>=2.0,<3",
]
worker = [
  # whisperx is installed separately in Dockerfile (--no-deps) to avoid its
  # torch~=2.8.0 constraint conflicting with the base image's torch 2.10.0.
  # The dependencies below cover whisperx's runtime needs (minus torch/torchaudio).
  "faster-whisper>=1.1.1,<2",
  "ctranslate2>=4.5.0",
  "transformers>=5.9.0,<6",
  "nltk>=3.9.1",
  "numpy>=2.4.6",
  "omegaconf>=2.3.0",
  "pandas>=2.2.3",
  "pyannote.audio>=4.0.0",
  "opencc-python-reimplemented>=0.1.7",
  "yt-dlp>=2024.5.26",
  "yt-dlp-ejs>=0.7.0",
]
# Optional LLM correction stage. Only required when OLLAMA_BASE_URL is set.
# Workers built without this extra still boot; the LLM stage is gated by the
# env var and httpx is imported lazily.
worker-llm = ["httpx>=0.27,<1"]
dev = [
  "whisper-ui[frontend,worker-llm]",
  "pytest>=9.0,<10",
  "pytest-cov>=7.0,<8",
  # In-process Redis stand-in for the end-to-end integration test. Avoids
  # spinning up a real Redis or a Docker testcontainer in CI. The ``lua``
  # extra pulls in ``lupa`` so the RedisProgressReporter's EVAL-based
  # atomic max-write script (see whisper_ui/worker/progress.py) can be
  # exercised under fakeredis without a real Redis server.
  "fakeredis[lua]>=2.35.1,<3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"whisper_ui" = ["web/templates/**/*.html", "web/static/**/*"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
  "C4",  # flake8-comprehensions
  "TC",  # flake8-type-checking
  "A",   # flake8-builtins
  "FA",  # flake8-future-annotations
  "T20", # flake8-print
  "RET", # flake8-return
  "PTH", # flake8-use-pathlib
]
ignore = ["RUF012"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Integration tests require ffmpeg on PATH and are excluded from the
# default run so unit tests stay fast. Run them explicitly with
# `pytest -m integration` (in CI's integration stage, for example).
markers = [
  "integration: end-to-end tests that exercise real I/O boundaries (ffmpeg, sqlite, filestore, fakeredis)",
]
addopts = "-m 'not integration'"
