[project]
name = "whisper-ui"
version = "2.14.0"
description = "Speech-to-text system using OpenAI Whisper with speaker diarization and Docker GPU support"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0,<3",
  "pydantic-settings>=2.0,<3",
  "redis>=8.0.0,<9",
  "rq>=2.9.1,<3",
]

[project.optional-dependencies]
frontend = [
  "fastapi[standard]>=0.136.3,<1",
  "python-docx>=1.0,<2",
  "argon2-cffi>=25.1.0,<26",
  # SessionMiddleware needs itsdangerous to sign session cookies. It is
  # not a transitive dependency of fastapi[standard], so list it here.
  "itsdangerous>=2.0,<3",
  # /metrics endpoint (Prometheus exposition).
  "prometheus-client>=0.21,<1",
  # Submit-time playlist flat-extraction (web/playlist.py): metadata only,
  # media downloads stay in the worker. Version floor mirrors the worker
  # extra so both resolve to the same release.
  "yt-dlp>=2026.6.9",
]
worker = [
  # whisperx is installed separately in Dockerfile (--no-deps) to avoid its
  # torch~=2.8.0 constraint conflicting with the base image's torch 2.10.0.
  # The dependencies below cover whisperx's runtime needs (minus torch/torchaudio).
  "faster-whisper>=1.1.1,<2",
  "ctranslate2>=4.8.0",
  "transformers>=5.12.0,<6",
  "nltk>=3.9.1",
  "numpy>=2.4.6",
  "omegaconf>=2.3.1",
  "pandas>=2.2.3",
  "pyannote.audio>=4.0.0",
  "opencc-python-reimplemented>=0.1.7",
  "yt-dlp>=2026.6.9",
  "yt-dlp-ejs>=0.7.0",
  "gdown>=5.0,<6",
]
# Optional LLM correction stage. Only required when OLLAMA_BASE_URL is set.
# Workers built without this extra still boot; the LLM stage is gated by the
# env var and httpx is imported lazily.
worker-llm = ["httpx>=0.27,<1"]
dev = [
  "whisper-ui[frontend,worker-llm]",
  "pytest>=9.1.0,<10",
  "pytest-cov>=7.0,<8",
  # In-process Redis stand-in for the end-to-end integration test. Avoids
  # spinning up a real Redis or a Docker testcontainer in CI. The ``lua``
  # extra pulls in ``lupa`` so the RedisProgressReporter's EVAL-based
  # atomic max-write script (see whisper_ui/worker/progress.py) can be
  # exercised under fakeredis without a real Redis server.
  #
  # Held below 2.36.0: that release refactored CLIENT INFO so in-process
  # connections stop exposing 'addr', and RQ's Worker._set_ip_address reads
  # client['addr'] without catching KeyError, which breaks the SimpleWorker
  # burst tests. Drop the <2.36.0 cap and the matching .github/dependabot.yml
  # ignore once upstream restores the field (or RQ guards the lookup).
  "fakeredis[lua]>=2.35.1,<2.36.0",
  # Visual/contrast regression tests (tests/visual, `pytest -m visual`).
  # Renders the compiled stylesheet in a headless Chromium and reads computed
  # colors to guard theme contrast (issue #61). Browser binary is installed
  # separately via `playwright install chromium` (not a Python dependency).
  "pytest-playwright>=0.5,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"whisper_ui" = ["web/templates/**/*.html", "web/static/**/*"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
  "C4",  # flake8-comprehensions
  "TC",  # flake8-type-checking
  "A",   # flake8-builtins
  "FA",  # flake8-future-annotations
  "T20", # flake8-print
  "RET", # flake8-return
  "PTH", # flake8-use-pathlib
]
ignore = ["RUF012"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Integration tests require ffmpeg on PATH and are excluded from the
# default run so unit tests stay fast. Run them explicitly with
# `pytest -m integration` (in CI's integration stage, for example).
markers = [
  "integration: end-to-end tests that exercise real I/O boundaries (ffmpeg, sqlite, filestore, fakeredis)",
  "visual: browser-rendered checks (Playwright + Chromium) on the compiled stylesheet; run with `pytest -m visual`",
]
# Both integration and visual tests need extra setup (ffmpeg / a Chromium
# browser), so the default run stays fast and pure-Python; trigger each
# explicitly with `pytest -m integration` / `pytest -m visual`.
addopts = "-m 'not integration and not visual'"
